--- a/1.1/1.1.0-Changelog.md
+++ b/1.1/1.1.0-Changelog.md
@@ -1,12 +1,25 @@
-# Changes
+# Builds
 
-## Stories
+| Component | Short code | Image | Image ID |
+|--|--|--|--|
+| Proxy | proxy | data.stack:proxy.1.1.0 | 913d9ffebed0 |
+| Deployment manager | dm | data.stack:dm.1.1.0 | fc003b709f41 |
+| Gateway | gw | data.stack:gw.1.1.0 | 0bf4ee066d65 |
+| Service manager | sm | data.stack:sm.1.1.0 | d15363558dfe |
+| Base image | base | data.stack:base.1.1.0 | b56387478f44 |
+| Partner manager | pm | data.stack:pm.1.1.0 | 00156096e918 |
+| User management | user | data.stack:user.1.1.0 | 45c9d67c42fc |
+| Notification engine | ne | data.stack:ne.1.1.0 | 511e5888db45 |
+| Monitoring | mon | data.stack:mon.1.1.0 | 10cb4e06f507 |
+| Security | sec | data.stack:sec.1.1.0 | bf4b3be73777 |
+
+# Stories
 * STO1054 : [Author][UI][FAAS] As a user, I must be able to write and deploy hooks/nanoservices from data.stack UI
 * STO1067 : [Author][UI] As a user, I must be able to purge logs from Insights
 * STO1072 : [Appcenter][UI] Link for relation attributes in the Edit/Save page to be able to navigate to related entity
 * STO1057 : [Author][UI] As a user I must be able to select the functions from function page in hooks
 
-## Defects
+# Defects
 * DEF1366 : [Appcenter][WF] Approval of updated record is throwing error.
 * DEF1362 : [PreHook] Prehook is not working as expected when the hook is external.
 * DEF1363 : [PostHook] Posthook is not working as expected when the hook is external.
