Removed image IDs

--- a/1.1/1.1.1-Changelog.md
+++ b/1.1/1.1.1-Changelog.md
@@ -1,17 +1,17 @@
 # Builds
 
-| Component | Short code | Image | Image ID |
-|--|--|--|--|
-| Proxy | proxy | data.stack:proxy.1.1.0 | 913d9ffebed0 |
-| Deployment manager | dm | data.stack:dm.1.1.0 | fc003b709f41 |
-| Gateway | gw | data.stack:gw.1.1.1 | 996fe48354e8 |
-| Service manager | sm | data.stack:sm.1.1.0 | d15363558dfe |
-| Base image | base | data.stack:base.1.1.0 | b56387478f44 |
-| Partner manager | pm | data.stack:pm.1.1.0 | 00156096e918 |
-| User management | user | data.stack:user.1.1.0 | 45c9d67c42fc |
-| Notification engine | ne | data.stack:ne.1.1.0 | 511e5888db45 |
-| Monitoring | mon | data.stack:mon.1.1.0 | 10cb4e06f507 |
-| Security | sec | data.stack:sec.1.1.0 | bf4b3be73777 |
+| Component | Short code | Image |
+|--|--|--|
+| Proxy | proxy | data.stack:proxy.1.1.0 |
+| Deployment manager | dm | data.stack:dm.1.1.0 |
+| Gateway | gw | data.stack:gw.1.1.1 |
+| Service manager | sm | data.stack:sm.1.1.0 |
+| Base image | base | data.stack:base.1.1.0 |
+| Partner manager | pm | data.stack:pm.1.1.0 |
+| User management | user | data.stack:user.1.1.0 |
+| Notification engine | ne | data.stack:ne.1.1.0 |
+| Monitoring | mon | data.stack:mon.1.1.0 |
+| Security | sec | data.stack:sec.1.1.0 |
 
 # Defects
 * DEF1374 :	FaaS is only working for superadmins
