--- a/2.x/2.3.0-Changelog.md
+++ b/2.x/2.3.0-Changelog.md
@@ -4,11 +4,12 @@
 |--|--|--|
 | Base | base | data.stack.base:2.3.0 |
 | Common | common | data.stack.common:2.3.0 |
-| FaaS base image | faas-base | data.stack.faas:base.2.3.0 |
+| FaaS base image | faas-base | data.stack.faas.base:2.3.0 |
+| B2B base image | faas-base | data.stack.b2b.base:2.3.0 |
 | Gateway | gw | data.stack.gw:2.3.0 |
 | Monitoring | mon | data.stack.mon:2.3.0 |
 | Notification engine | ne | data.stack.ne:2.3.0 |
-| Partner manager | pm | data.stack.pm:2.3.0 |
+| B2B manager | pm | data.stack.bm:2.3.0 |
 | Proxy | proxy | data.stack.proxy:2.3.0 |
 | Service manager | sm | data.stack.sm:2.3.0 |
 | User | user | data.stack.user:2.3.0 |
