--- a/2.x/2.2.0-Changelog.md
+++ b/2.x/2.2.0-Changelog.md
@@ -5,7 +5,7 @@
 | Base | base | data.stack.base:2.2.0 |
 | Common | common | data.stack.common:2.2.0 |
 | Deployment manager | dm | data.stack.dm:2.2.0 |
-| FaaS base image | faas-base | data.stack.faas:base.2.2.0 |
+| FaaS base image | faas-base | data.stack.faas.base:2.2.0 |
 | Gateway | gw | data.stack.gw:2.2.0 |
 | Monitoring | mon | data.stack.mon:2.2.0 |
 | Notification engine | ne | data.stack.ne:2.2.0 |
