--- a/2.x/2.4.0-Changelog.md
+++ b/2.x/2.4.0-Changelog.md
@@ -2,18 +2,18 @@
 
 | Component | Short code | Image |
 |--|--|--|
-| Service manager | sm | data.stack:sm.2.4.0 |
-| Base | base | data.stack:base.2.4.0 |
-| Gateway | gw | data.stack:gw.2.4.0 |
-| Common | common | data.stack:common.2.4.0 |
-| Proxy | proxy | data.stack:proxy.2.4.0 |
-| User | user | data.stack:user.2.4.0 |
-| Deployment manager | dm | data.stack:dm.2.4.0 |
-| Notification engine | ne | data.stack:ne.2.4.0 |
-| Security | sec | data.stack:sec.2.4.0 |
-| Monitoring | mon | data.stack:mon.2.4.0 |
-| Partner manager | pm | data.stack:pm.2.4.0 |
-| FaaS base image | faas-base | data.stack:faas.base.2.4.0 |
+| Service manager | sm | data.stack.sm:2.4.0 |
+| Base | base | data.stack.base:2.4.0 |
+| Gateway | gw | data.stack.gw:2.4.0 |
+| Common | common | data.stack.common:2.4.0 |
+| Proxy | proxy | data.stack.proxy:2.4.0 |
+| User | user | data.stack.user:2.4.0 |
+| Deployment manager | dm | data.stack.dm:2.4.0 |
+| Notification engine | ne | data.stack.ne:2.4.0 |
+| Security | sec | data.stack.sec:2.4.0 |
+| Monitoring | mon | data.stack.mon:2.4.0 |
+| Partner manager | pm | data.stack.pm:2.4.0 |
+| FaaS base image | faas-base | data.stack.faas.base:2.4.0 |
 
 # Defects
 
