--- a/2.x/2.5.0-Changelog.md
+++ b/2.x/2.5.0-Changelog.md
@@ -2,16 +2,17 @@
 
 | Component | Short code | Image |
 |--|--|--|
-| Service manager | sm | data.stack:sm.2.5.0 |
-| Base | base | data.stack:base.2.5.0 |
-| Gateway | gw | data.stack:gw.2.5.0 |
-| Common | common | data.stack:common.2.5.0 |
-| Proxy | proxy | data.stack:proxy.2.5.0 |
-| User | user | data.stack:user.2.5.0 |
-| Notification engine | ne | data.stack:ne.2.5.0 |
-| Monitoring | mon | data.stack:mon.2.5.0 |
-| B2B Manager | bm | data.stack:bm.2.5.0 |
-| FaaS base image | faas-base | data.stack:faas.base.2.5.0 |
+| Service manager | sm | data.stack.sm:2.5.0 |
+| Base | base | data.stack.base:2.5.0 |
+| Gateway | gw | data.stack.gw:2.5.0 |
+| Common | common | data.stack.common:2.5.0 |
+| Proxy | proxy | data.stack.proxy:2.5.0 |
+| User | user | data.stack.user:2.5.0 |
+| Notification engine | ne | data.stack.ne:2.5.0 |
+| Monitoring | mon | data.stack.mon:2.5.0 |
+| B2B Manager | bm | data.stack.bm:2.5.0 |
+| B2B Base | b2b-base | data.stack.b2b.base:2.5.0 |
+| FaaS base | faas-base | data.stack.faas.base:2.5.0 |
 
 # Defects
 * DEF2333 UI Refresh] [AppCenter] [SchemaFree]:  it shows 'N.A.' for ID in bulk import
